<!--
 ~ Copyright (c) Microsoft Corporation. All rights reserved.
Licensed under the MIT License.
Code generated by Microsoft (R) TypeSpec Code Generator.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.azure.v2</groupId>
    <artifactId>azure-client-sdk-parent</artifactId>
    <version>2.0.0-beta.1</version> <!-- {x-version-update;com.azure.v2:azure-client-sdk-parent;current} -->
    <relativePath>../../parents/azure-client-sdk-parent-v2</relativePath>
  </parent>

  <groupId>com.azure.v2</groupId>
  <artifactId>azure-security-keyvault-keys</artifactId>
  <version>5.0.0-beta.1</version> <!-- {x-version-update;com.azure.v2:azure-security-keyvault-keys;current} -->
  <packaging>jar</packaging>

  <name>SDK for KeyVault</name>
  <description>This package contains KeyVault client library.</description>
  <url>https://github.com/Azure/azure-sdk-for-java</url>

  <licenses>
    <license>
      <name>The MIT License (MIT)</name>
      <url>http://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/Azure/azure-sdk-for-java</url>
    <connection>scm:git:git@github.com:Azure/azure-sdk-for-java.git</connection>
    <developerConnection>scm:git:git@github.com:Azure/azure-sdk-for-java.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>microsoft</id>
      <name>Microsoft</name>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Code quiality reports -->
    <checkstyle.suppressionsLocation>checkstyle-suppressions.xml</checkstyle.suppressionsLocation>
    <spotless.skip>false</spotless.skip>
    <spotbugs.excludeFilterFile>spotbugs-exclude.xml</spotbugs.excludeFilterFile>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.clientcore</groupId>
      <artifactId>core</artifactId>
      <version>1.0.0-beta.8</version> <!-- {x-version-update;io.clientcore:core;dependency} -->
    </dependency>
    <dependency>
      <groupId>com.azure.v2</groupId>
      <artifactId>azure-core</artifactId>
      <!-- TODO (vcolin7): Change from current to dependency once we've published azure-core v2 to Maven. -->
      <version>2.0.0-beta.1</version> <!-- {x-version-update;com.azure.v2:azure-core;current} -->
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>com.azure.v2</groupId>
      <artifactId>azure-identity-v2</artifactId>
      <version>2.0.0-beta.1</version> <!-- {x-version-update;com.azure.v2:azure-identity-v2;current} -->
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <executions>
          <execution>
            <id>run-annotation-processing</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <source>1.8</source>
              <target>1.8</target>
              <release>8</release>
              <proc>only</proc>
              <generatedSourcesDirectory>${project.build.directory}/generated-sources/</generatedSourcesDirectory>
              <annotationProcessorPaths>
                <annotationProcessorPath>
                  <groupId>io.clientcore</groupId>
                  <artifactId>annotation-processor</artifactId>
                  <version>1.0.0-beta.2</version> <!-- {x-version-update;io.clientcore:annotation-processor;dependency} -->
                </annotationProcessorPath>
              </annotationProcessorPaths>
              <annotationProcessors>
                <annotationProcessor>io.clientcore.annotation.processor.AnnotationProcessor</annotationProcessor>
              </annotationProcessors>
              <compilerArgs>
                <arg>-Xlint:-options</arg>
              </compilerArgs>
              <excludes>
                <exclude>module-info.java</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>io.clientcore</groupId>
            <artifactId>annotation-processor</artifactId>
            <version>1.0.0-beta.2</version> <!-- {x-version-update;io.clientcore:annotation-processor;dependency} -->
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>
